@@ -340,10 +340,14 @@ config SAM34_EIC
 	depends on ARCH_CHIP_SAM4L || ARCH_CHIP_SAM4E
 
 config SAM34_DMAC0
-	bool "DMA controller (DMAC)"
+	bool "DMA controller (DMAC0)"
 	default n
 	depends on ARCH_CHIP_SAM3U || ARCH_CHIP_SAM3X || ARCH_CHIP_SAM3A || ARCH_CHIP_SAM4E
 	select ARCH_DMA
+
+config SAM34_DMAC1
+	bool
+	default n
 
 config SAM34_EMAC
 	bool "Ethernet MAC (EMAC)"
